Se modifico la estructura

--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="card">
+            <figure>
+                <img src="https://images.unsplash.com/photo-1543286386-2e659306cd6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8YWRtaW5pc3RyYWNpb258ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60">
+            </figure>
+            <div class="contenido">
+                <h3>Administracion</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="card">
+            <figure>
+                <img src="https://images.unsplash.com/photo-1605907126332-53b63528ce99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGNvbXB1dGFjaW9ufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1000&q=60">
+            </figure>
+            <div class="contenido">
+                <h3>Programación</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
