Se realizaron algunos cambios en la estructura

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
             <div class="contenido">
                 <h3>Administracion</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i>Contacto</a>
+                
             </div>
         </div>
     </div>
