--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
                 <img src="https://images.unsplash.com/photo-1554224154-26032ffc0d07?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29udGFiaWxpZGFkfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1000&q=60">
             </figure>
             <div class="contenido">
-                <h3>Contabilidad</h3>
+                <h3>Cristian J. Vargas</h3>
+                <h4>Estudiante</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
-            </div>
-            <div class="links">
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -36,10 +35,18 @@
                 <img src="https://images.unsplash.com/photo-1543286386-2e659306cd6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8YWRtaW5pc3RyYWNpb258ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60">
             </figure>
             <div class="contenido">
-                <h3>Administracion</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
-                <a href="#"><i class="fa-brands fa-facebook"></i>Contacto</a>
-                
+                <h3>Estudios academicos</h3>
+                <p>
+                    <ul>
+                        <ol>Tecnico en gestión y administración de las organizaciones.</ol>
+                        <ol>Contador publico en la Unlar.</ol>
+                        <ol>Tecnico en Programacion en UTN.</ol>
+                    </ul>
+                </p>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
