Se hace modificaciones en los textos

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
             </figure>
             <div class="contenido">
                 <h3>Cristian J. Vargas</h3>
-                <h4>Estudiante</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <h4>Tecnico en administración de empresas</h4>
+                <p>Estudie en la escuela de Comercio N°1, donde obtuve el titulo de Tecnico en gestion y administración de empresas, segui mi formación academica en la Universidad Nacional de la Rioja, en la carrera de Contador Público, donde estudie por 3 años sin finalizar la carrera, actualmente me encuentro en la UTN estudiando la tecnicatura en Programación.
+                </p>
+                
             </div>
         </div>
     </div>
@@ -43,10 +41,7 @@
                         <ol>Tecnico en Programacion en UTN.</ol>
                     </ul>
                 </p>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                
             </div>
         </div>
     </div>
@@ -57,8 +52,8 @@
                 <img src="https://images.unsplash.com/photo-1605907126332-53b63528ce99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGNvbXB1dGFjaW9ufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1000&q=60">
             </figure>
             <div class="contenido">
-                <h3>Programación</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla dolores recusandae nisi nobis porro doloribus non vel omnis animi magnam, illo quaerat eos, harum ab ipsum! Aspernatur, sed commodi.</p>
+                <h3>Contacto</h3>
+                <p>Aquí estan mis redes sociales, por si quieren contactarse conmigo.</p>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
