Se agrego una lista, y se hicieron cambios

--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
             </figure>
             <div class="contenido">
                 <h3>Estudios academicos</h3>
-                <p>
                     <ul>
-                        <ol>Tecnico en gestión y administración de las organizaciones.</ol>
-                        <ol>Contador publico en la Unlar.</ol>
-                        <ol>Tecnico en Programacion en UTN.</ol>
+                        <li>Técnico en gestión y administración de las organizaciones |<b>Finalizado</b></li>
+                        <li>Contador publico en la Unlar | <b>En curso</b></li>
+                        <li type="disc">Tecnico en Programacion en UTN | <b>En curso</b></li>
                     </ul>
-                </p>
-                
             </div>
         </div>
     </div>
